# Corral

./: AVAILABLE_PIECES.h  CMakeLists.txt  bitmap.h  corral.html  dynamic_array.h  fast_map.h  main  polyomino.cpp  polyomino.txt  precomputations.h
background/: Untitled-1.ai  Untitled-1.jpg.ai  nonomino_tiling.py  tiling.ai
include/: AVAILABLE_PIECES.h  bitmap.h  fast_map.h  precomputations.h  timer.h
main.dSYM/Contents/Resources/DWARF/: main
